# bone-segmentation

./: CMakeLists.txt
segmentation/: CMakeLists.txt
segmentation/annotated-slices/: CMakeLists.txt  annotated-gc.hxx  main.cxx
segmentation/assembly/: CMakeLists.txt  main.cxx
segmentation/geometric-active-contours/: CMakeLists.txt  GeometricActiveContours.cxx  GeometricActiveContours.xml
segmentation/include/: CMakeLists.txt  Globals.hpp
segmentation/include/filters/: GraphCut.hpp
segmentation/include/utils/: ImageUtils.hpp
segmentation/intensity-based-graph-cut/: 01-Preprocessing.hpp  03-AdjacentBoneSeparation.hpp  CMakeLists.txt  ImageSplitter.hpp  Main.cxx
segmentation/krcah-graph-cut/: 01-Preprocessing.hpp  CMakeLists.txt
segmentation/zhang/: CMakeLists.txt  Zhang.xml
src/geometric-active-contours/source/: CMakeLists.txt  ChamferDistanceTransform.h  GeometricActiveContours.cxx
src/intensity-based-graph-cut/source/: 02-Segmentation.hpp  CMakeLists.txt  Globals.hpp  Main.cxx
src/intensity-based-graph-cut/source/utils/: FilterUtils.hpp
src/proposed-method/src/: CMakeLists.txt  Globals.hpp
src/proposed-method/src/filters/: ChamferDistanceTransform.hpp  SheetnessMeasure.hpp
src/proposed-method/src/utils/: FilterUtils.hpp  ImageUtils.hpp
src/zhang/source/: CMakeLists.txt  Globals.hpp  Zhang.cxx
src/zhang/source/utils/: FilterUtils.hpp
